Pages du support client

--- a/app/views/gsc.html
+++ b/app/views/gsc.html
@@ -1,6 +1,6 @@
 <p>This is the cgv view.</p>
 
-<div data-ng-init="getContent()">
+<div>
 <p>{{pageContent.gscContent}}</p>
 <p>{{pageContent.lmContent}}</p>
 </div>
