--- a/app/views/tarif.html
+++ b/app/views/tarif.html
@@ -1,6 +1,6 @@
 <p>This is the tarif view.</p>
 
-<div data-ng-init="getTarifList()">
+<div>
 	<div ng-repeat='tarif in tarifList'>
 		{{tarif.nom}} - Abonnement : {{tarif.prix}}€ / mois - Nombre d'applications : {{tarif.nbAppli}}
 	</div>
