Fix errors, fix testjson route missing, explore more datas from databases.json

--- a/app/views/testjson.html
+++ b/app/views/testjson.html
@@ -1,5 +1,10 @@
 <h1>TEST JSON</h1>
-<pre>{{jsonDatas}}</pre>
-<div>
-  <div ui-grid="{ data: jsonDatas.values[0].datas[0].datas }" class="myGrid"></div>
+<div ng-repeat="database in jsonDatas.values">
+  <h2>Database name: {{database.database}}</h2>
+
+  <div ng-repeat="table in database.datas">
+    <h3>Table name: {{table.table}}</h3>
+    <div ui-grid="{ data: table.datas }" class="myGrid"></div>
+  </div>
 </div>
+ 
