Ajout des champs necessaires dans inscription et reecriture de la page cgv

--- a/app/views/gsc.html
+++ b/app/views/gsc.html
@@ -1,6 +1,5 @@
 <p>This is the cgv view.</p>
 
 <div>
-<p>{{pageContent.gscContent}}</p>
-<p>{{pageContent.lmContent}}</p>
+  <p ng-bind-html="pageContent | stringToHtml"></p>
 </div>
