--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -434,99 +434,7 @@ Alert
 	background:#d2f4b0;
 }
 
-/*
-Button
-=========================== */
-.btn {
-  display: inline-block;
-  padding: 6px 20px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  background-color: #fff;
-  color:#444444;
-  border: 1px solid transparent;
-  border-radius: 3px;
-  text-transform:uppercase;
-}
 
-.btn-bordered{
-	color:#fff;
-	background:none;
-	border:1px solid #fff;
-}
-
-.btn-bordered:hover,
-.btn-bordered:focus,
-.btn-bordered:active,
-.btn-bordered.active,
-.open > .dropdown-toggle.btn-bordered{
-	background:#fff;
-	border:1px solid #fff;
-	color:#444444;
-}
-
-.btn-default {
-  color: #fff;
-  background-color: #444444;
-  border-color: #444444;
-}
-
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active,
-.btn-default.active,
-.open > .dropdown-toggle.btn-default{
-  color:#fff;
-}
-
-.btn-bordered.btn-default{
- background:none;
- color: #444444;
-}
-
-.btn-bordered.btn-default:hover,
-.btn-bordered.btn-default:focus,
-.btn-bordered.btn-default:active,
-.btn-bordered.btn-default.active,
-.open > .dropdown-toggle.btn-bordered.btn-default{
-  background:#444444;
-  color:#fff;
-  border-color:#444444;
-}
-
-.btn-primary,
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open > .dropdown-toggle.btn-primary {
-  color: #fff;
-}
-
-.btn-primary:hover{
-	opacity:0.9;
-}
-
-.btn-lg{
-  font-weight:700;
-  padding: 14px 35px;
-}
-
-.btn-inline a{
-	display:inline-block;
-	margin:0 2px 5px 2px;
-}
 
 
 
@@ -541,7 +449,7 @@ Button
 }
 
 .gray-bg{
-	background:#f9f9f9;
+	background:#f9f9f9;Gi
 }
 
 .feature-box{
@@ -557,7 +465,7 @@ Button
 Loginand register form
 =========================== */
 #wrapper-fixed{
-	background:url(/public/img/polygon.jpg) no-repeat top center fixed;
+	background:url(../../public/img/polygon.jpg) no-repeat top center fixed;
 	position:relative;
 	width:100%;
 	height:100%;
@@ -681,7 +589,97 @@ Loginand register form
 }
 
 
+/*
+Pricing table
+=========================== */
+.pricing-wrapper{
+	float:left;
+	width:100%;
+	color:#404040;
+	overflow:hidden;
+}
 
+.pricing-head{
+	background:#2e2e2e;
+	float:left;
+	width:100%;
+	color:#fff;
+	padding:25px 35px 25px 35px;
+	border-bottom:5px solid #222222;
+	border-radius:10px 10px 0 0;
+}
+
+.pricing-head.popular{
+	border-bottom:5px solid rgba(46, 46, 46, 0.1);
+}
+
+.pricing-head h4{
+	color:#fff;
+	font-size:28px;
+	line-height:28px;
+	margin:10px 0 5px 0;
+}
+
+.pricing-head p{
+	font-size:18px;
+	line-height:18px;
+	margin-bottom:0;
+	font-weight:400;
+}
+
+.pricing-price{
+	width:80px;
+	height:80px;
+	float:left;
+	margin:0 20px 0 0;
+	padding:25px 0 25px 0;
+	overflow:hidden;
+	background:#fff;
+	color:#2e2e2e;
+	font-size:28px;
+	line-height:29px;
+	border-radius:50%;
+	text-align:center;
+	font-weight:700;
+}
+
+.pricing-wrapper ul{
+	background:#fff;
+	border-right:1px solid #e2e2e2;
+	border-left:1px solid #e2e2e2;
+	float:left;
+	width:100%;
+	margin:0;
+	padding:0;
+	text-align:center;
+}
+
+.pricing-wrapper ul li{
+	background:url(../public/img/pricing-line.png) no-repeat bottom center;
+	float:left;
+	width:100%;
+	list-style:none;
+	margin:0;
+	padding:20px;
+	font-size:18px;
+	line-height:18px;
+}
+
+.pricing-wrapper ul li strong{
+	font-weight:700;
+	text-transform:uppercase;
+}
+
+.pricing-bottom{
+	background:#fff;
+	border:1px solid #e2e2e2;
+	border-radius:0 0 10px 10px;
+	border-top:none;
+	float:left;
+	width:100%;
+	margin:0;
+	padding:25px 20px 25px 20px;
+	text-align:center;
 
 
 
@@ -743,6 +741,7 @@ Background color
 .owl-theme .owl-controls .owl-buttons div.owl-prev:hover,
 .owl-theme .owl-controls .owl-buttons div.owl-next:hover,
 #toTopHover,
+.pricrings,
 .log-tabs li a,
 .log-tabs li a:hover,
 .log-tabs li a:focus,
