--- a/app/views/login.html
+++ b/app/views/login.html
@@ -56,7 +56,7 @@
 									</div>
 									<div class="form-group">
 										<div class="col-lg-12 text-center">
-											<button class="btn btn-primary btn-lg">Sign up</button>
+											<button class="btn btn-primary btn-lg">S'inscrire</button>
 										</div>
 									</div>
 								</form>
