--- a/app/views/tarif.html
+++ b/app/views/tarif.html
@@ -1,7 +1,73 @@
-<p>This is the tarif view.</p>
-
-<div>
-	<div ng-repeat='tarif in tarifList'>
-		{{tarif.nom}} - Abonnement : {{tarif.prix}}€ / mois - Nombre d'applications : {{tarif.nbAppli}}
+<!-- Start pricing -->
+<section id="pricing" class="contain gray-bg">
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-md-10 col-md-offset-1 wow fadeInUp" data-wow-delay="0.4s">
+				<h3 class="heading">Choisissez votre solution</h3>
+			</div>
+		</div>
+		<div class="row wow fadeInDown" data-wow-delay="0.4s">
+			<div class="col-md-4">
+				<div class="pricing-wrapper">
+					<div class="pricing-head">
+						<span class="pricing-price">0€</span>
+						<h4>Gratuit</h4>
+						<p>Fonctionnalités limitées</p>
+					</div>
+					<ul>
+						<li><strong>30 jours</strong> d'essais</li>
+						<li><strong>Pas</strong> de support</li>
+						<li><strong>Pas</strong> de mise à jour</li>
+						<li><strong>1 utilisateur</strong> </li>
+						<li><strong>32 MB</strong> bandwidth</li>
+						<li><strong>Pas</strong> de securité</li>
+					</ul>
+					<div class="pricing-bottom">
+						<a href="#" class="btn btn-default btn-bordered btn-lg">GRATUIT</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="pricing-wrapper">
+					<div class="pricing-head popular">
+						<span class="pricing-price">17€</span>
+						<h4>Personnel</h4>
+						<p>Idéal pour indépendants</p>
+					</div>
+					<ul>
+						<li>Usage <strong>illimité</strong></li>
+						<li>Support <strong>gratuit</strong></li>
+						<li>Mises à jours<strong>gratuites</strong></li>
+						<li>jusqu'à<strong>10 utilisateurs</strong></li>
+						<li><strong>1 GB</strong> bandwidth</li>
+						<li>Package <strong>sécurité</strong></li>
+					</ul>
+					<div class="pricing-bottom">
+						<a href="#" class="btn btn-primary btn-lg subscribe-button">SOUSCRIRE</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="pricing-wrapper">
+					<div class="pricing-head popular">
+						<span class="pricing-price">89€</span>
+						<h4>Communauté</h4>
+						<p>L'atout PME/TPE</p>
+					</div>
+					<ul>
+						<li>Usage <strong>illimité</strong></li>
+						<li>Support <strong>gratuit</strong></li>
+						<li>Mises à jours<strong>gratuites</strong></li>
+						<li>jusqu'à<strong>100 utilisateurs</strong></li>
+						<li><strong>10 GB</strong> bandwidth</li>
+						<li>Package <strong>sécurité</strong></li>
+					</ul>
+					<div class="pricing-bottom">
+						<a href="#" class="btn btn-primary btn-lg subscribe-button">SOUSCRIRE</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
+</section>
+<!-- End pricing -->
