--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row text-center wow fadeInUp" data-wow-delay="0.4s">
         <div class="col-md-10 col-md-offset-1">
-          <h3><span>Le Logiciel</span> qu'il vous faut.</h3>
+          <h3><span>ODA Challenge</span> IPSSI</h3>
           <p class="btn-inline">
             <a href="#"
                data-pretty="prettyPhoto"
