--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -449,7 +449,7 @@ Alert
 }
 
 .gray-bg{
-	background:#f9f9f9;Gi
+	background:#f9f9f9;
 }
 
 .feature-box{
@@ -680,17 +680,7 @@ Pricing table
 	margin:0;
 	padding:25px 20px 25px 20px;
 	text-align:center;
-
-
-
-
-
-
-
-
-
-
-
+}
 
 /*
 Color
