--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,115 @@
 /*
+Color
+=========================== */
+a,
+a:focus,
+a:hover,
+a:active,
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a.selected,
+.navbar-default .navbar-nav .active a,
+.navbar-default .navbar-nav .dropdown.active a,
+.navbar-default .navbar-nav .active a:hover,
+.navbar-default .navbar-nav .dropdown.active a:hover,
+.navbar-default .navbar-nav .active a:focus,
+.navbar-default .navbar-nav .dropdown.active a:focus,
+.icon-counter:hover,
+.social-network a:hover,
+.social-network a:focus,
+.social-network a:active,
+.pe-feature,
+.accordion-heading a:hover i,
+.counter-number,
+.pricing-head.popular .pricing-price,
+.validation{
+	color: #f55e25;
+}
+
+/*
+Background color
+=========================== */
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary,
+.subscribe-button,
+.navbar-default .navbar-toggle:hover .icon-bar,
+.feature-box:hover .pe-feature,
+.accordion-heading a i,
+.accordion-heading a:hover,
+.flex-direction-nav .flex-next:hover,
+.flex-direction-nav .flex-prev:hover,
+.flex-control-paging li a:hover,
+.flex-control-paging li a.flex-active,
+.pricing-head.popular,
+.owl-theme .owl-controls .owl-buttons div.owl-prev:hover,
+.owl-theme .owl-controls .owl-buttons div.owl-next:hover,
+#toTopHover,
+.log-tabs li a,
+.log-tabs li a:hover,
+.log-tabs li a:focus,
+.log-tabs li a:active{
+	background-color: #f55e25;
+}
+
+/*
+Border color
+=========================== */
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary,
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a.selected,
+.navbar-default .navbar-nav .active a,
+.navbar-default .navbar-nav .dropdown.active a,
+.navbar-default .navbar-nav .active a:hover,
+.navbar-default .navbar-nav .dropdown.active a:hover,
+.navbar-default .navbar-nav .active a:focus,
+.navbar-default .navbar-nav .dropdown.active a:focus,
+.subscribe-button,
+.testimoni-avatar:hover,
+.icon-counter:hover,
+.form-control:focus,
+ul.listForm li .form-control:focus,
+.navbar-default .navbar-toggle:hover,
+.pe-feature,
+.accordion-heading a i,
+.accordion-heading a:hover{
+	border-color: #f55e25;
+}
+
+/*
+Color on mobile
+=========================== */
+@media (max-width: 767px){
+	.navbar-default .navbar-nav li a:hover,
+	.navbar-default .navbar-nav li a.selected,
+	.navbar-default .navbar-nav .active a,
+	.navbar-default .navbar-nav .dropdown.active a,
+	.navbar-default .navbar-nav .active a:hover,
+	.navbar-default .navbar-nav .dropdown.active a:hover,
+	.navbar-default .navbar-nav .active a:focus,
+	.navbar-default .navbar-nav .dropdown.active a:focus{
+		background:#f55e25;
+		border:1px solid #f55e25;
+		color:#fff;
+	}
+}
+
+
+
+
+
+/*
 Typography
 =========================== */
+
+
 
 body {
   background: #fff;
@@ -140,7 +249,7 @@ Navbar
   padding: 0;
 }
 .navbar-brand {
-  padding: 23px 0 23px 0;
+  padding: 2% 0 23px 0;
   margin: 0;
 }
 .navbar-default .collapse {
@@ -632,6 +741,31 @@ Pricing table
   padding: 25px 20px 25px 20px;
   text-align: center;
 }
+
+/*
+Pixeden icon setting
+=========================== */
+.pe-feature{
+	float:left;
+	margin:5px 20px 60px 0;
+	width:65px;
+	height:65px;
+	font-size:38px;
+	line-height:58px;
+	text-align:center;
+	border:2px solid;
+	border-radius:50%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+ -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.feature-box:hover .pe-feature{
+	color:#fff;
+}
+
 
 /*
   Ui to top
