--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,3 +42,68 @@
 <!-- End home -->
 
 <div class="clearfix"></div>
+
+
+<!-- Start features -->
+<section id="features" class="contain desc-wrapp gray-bg">
+  <div class="container">
+    <div class="row text-center wow fadeInUp" data-wow-delay="0.4s">
+      <div class="col-md-8 col-md-offset-2">
+        <h3 class="heading"><span>Pourquoi ODA4 ?</span>Parce que les autres sont mauvais.</h3>
+      </div>
+    </div>
+    <div class="row wow fadeInDown" data-wow-delay="0.4s">
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-phone pe-feature"></i>
+        <h5>Responsive "AF"</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-edit pe-feature"></i>
+        <h5>Facile à paramétrer</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-graph1 pe-feature"></i>
+        <h5>Design d'enfoiré</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-paper-plane pe-feature"></i>
+        <h5>Outils puissants</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-share pe-feature"></i>
+        <h5>Le plus populaire du challenge</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+      <div class="col-md-4 feature-box">
+        <i class="pe-7s-paperclip pe-feature"></i>
+        <h5>Chèque inclus</h5>
+        <p>
+        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+        </p>
+        <a href="#">En savoir plus</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End features -->
+
+<div class="clearfix"></div>
