--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,9 +6,7 @@
         <div class="col-md-10 col-md-offset-1">
           <h3><span>ODA Challenge</span> IPSSI</h3>
           <p class="btn-inline">
-            <a href="#"
-               data-pretty="prettyPhoto"
-               class="btn btn-bordered btn-lg zoom">Explications vidéos</a>
+            <a href="#" data-pretty="prettyPhoto" class="btn btn-bordered btn-lg zoom">Explications vidéos</a>
             <a href="#" class="btn btn-primary btn-lg">Essai gratuit</a>
           </p>
           <div class="home-slider">
@@ -57,7 +55,7 @@
         <i class="pe-7s-phone pe-feature"></i>
         <h5>Responsive "AF"</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -65,7 +63,7 @@
         <i class="pe-7s-edit pe-feature"></i>
         <h5>Facile à paramétrer</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -73,7 +71,7 @@
         <i class="pe-7s-graph1 pe-feature"></i>
         <h5>Design d'enfoiré</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -81,7 +79,7 @@
         <i class="pe-7s-paper-plane pe-feature"></i>
         <h5>Outils puissants</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -89,7 +87,7 @@
         <i class="pe-7s-share pe-feature"></i>
         <h5>Le plus populaire du challenge</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -97,7 +95,7 @@
         <i class="pe-7s-paperclip pe-feature"></i>
         <h5>Chèque inclus</h5>
         <p>
-        Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
+          Eu sit soluta antiopam, postea sanctus in an vis. Pro primis insolens recteque ne, nostrum molestie splendide sed et elitr.
         </p>
         <a href="#">En savoir plus</a>
       </div>
@@ -105,5 +103,26 @@
   </div>
 </section>
 <!-- End features -->
+<div class="clearfix"></div>
 
+<!-- Start download -->
+<section id="download">
+  <div class="download-wrapper">
+    <div class="container">
+      <div class="row wow fadeInUp" data-wow-delay="0.4s">
+        <div class="col-md-8 col-md-offset-2">
+          <h3>Essayez gratuitement</h3>
+          <p>Pas de carte de crédit requise.</p>
+          <form>
+            <fieldset class="subscribe-form">
+              <input class="subscribe" type="text" placeholder="Entrez votre adresse courriel">
+              <button class="subscribe-button" type="button">S'inscrire</button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End download -->
 <div class="clearfix"></div>
