--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1405,6 +1405,88 @@ ul.listForm li.push .form-control {
 }
 
 /*
+Download
+=========================== */
+#download{
+	background-image:url(../img/bg3.jpg);
+	background-position:0 0;
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	text-align:center;
+	font-size:24px;
+	line-height:36px;
+	color:#fff;
+}
+
+#download h3{
+	margin-bottom:20px;
+	color:#fff;
+	font-size:48px;
+	line-height:56px;
+	text-transform:uppercase;
+}
+
+.download-wrapper{
+	background:rgba(26, 26, 26, 0.95);
+	padding:80px 0 80px 0;
+}
+
+.subscribe-form{
+	display:inline-block;
+	background:rgba(255, 255, 255, 0.2);
+	width:75%;
+	position:relative;
+	margin:0 auto;
+	margin-top:20px;
+	padding:5px;
+	border-radius:40px;
+}
+
+input.subscribe{
+	position:relative;
+	width:100%;
+	height:60px;
+	border:none;
+	background:rgba(255, 255, 255, 0.95);
+	padding:10px 20px 10px 20px;
+	border-radius:40px;
+	color:#444444;
+	font-size:18px;
+	line-height:18px;
+}
+
+input.subscribe:-moz-placeholder {
+  color: #5c5c5c;
+}
+
+input.subscribe::-moz-placeholder {
+  color: #5c5c5c;
+}
+
+input.subscribe:-ms-input-placeholder {
+  color: #5c5c5c;
+}
+
+input.subscribe::-webkit-input-placeholder {
+  color: #5c5c5c;
+}
+
+.subscribe-button{
+	position:absolute;
+	text-transform:uppercase;
+	font-size: 18px;
+	line-height:18px;
+	font-weight:700;
+	padding: 10px 40px;
+	height:60px;
+	overflow:hidden;
+	border:3px solid;
+	border-radius:0 40px 40px 0;
+	right:5px;
+	top:5px;
+}
+
+/*
 Color
 =========================== */
 
