--- a/app/views/faq.html
+++ b/app/views/faq.html
@@ -1,5 +1,63 @@
 <p>This is the faq view for authentified user</p>
-
+<!--
 <div>
   <p ng-bind-html="pageContent | stringToHtml"></p>
 </div>
+-->
+<!-- Start FAQ -->
+	<section id="FAQ" class="contain">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7 wow fadeInLeft" data-wow-delay="0.4s">
+					<img src="img/device.png" class="img-responsive" alt="" />
+				</div>
+				<div class="col-md-5 margintop40 wow fadeInRight" data-wow-delay="0.4s">
+					<div class="accordion clearfix" id="accordion1">
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="/faq/#collapse1">
+									<i class="pe-7s-angle-down"></i> Question 1
+								</a>
+							</div>
+							<div id="collapse1" class="accordion-body collapse in">
+								<div class="accordion-inner">
+									<p>
+									Sed modus munere menandri ad. Te ius vero qualisque concludaturque. Sed ne vide fastidii incorrupte, elitr soleat intellegebat eam at. Aperiri facilis in pro, vis idque harum ex, ex vocent utroque similique vix choro moderatius consequuntur sit te, has veri salutatus te. Labore graecis aliquando ad sed. Accusam constituto honestatis et eos.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="/faq/#collapse2">
+									<i class="pe-7s-angle-down"></i> Question 2
+								</a>
+							</div>
+							<div id="collapse2" class="accordion-body collapse">
+								<div class="accordion-inner">
+									<p>
+									Ea qui facete corpora honestatis. Eu sit soluta antiopam, postea sanctus incorrupte an vis. Pro primis insolens recteque no. Pro ei nostrum molestie splendide. Sed et elitr zril, harum euismod nam ad, velit sadipscing quo ad. Duo facer solet deleniti an, nec quis oportere efficiendi an, et regione principes comprehensam qui.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-group">
+							<div class="accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="/faq/#collapse3">
+									<i class="pe-7s-angle-down"></i> Question 3
+								</a>
+							</div>
+							<div id="collapse3" class="accordion-body collapse">
+								<div class="accordion-inner">
+									<p>
+									Lorem ipsum dolor sit amet, eros accumsan intellegam cu eum, sed te docendi blandit. In primis lucilius mea, alii oratio numquam ei qui. Eam at quas mnesarchum. An adhuc consequat mel, usu in utroque dolorem. Nam diceret aliquam singulis no. Delenit temporibus scribentur eum eu. Labore graecis aliquando ad sed accusam constituto honestatis et eos.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End FAQ -->
