--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1304,7 +1304,7 @@ Contact
 #contact{
 	float:left;
 	width:100%;
-	background-image:url(../img/bg4.jpg);
+	background-image:url(../img/figure-black-and-white-polygon.jpg);
 	background-position:0 0;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
