--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1421,7 +1421,7 @@ ul.listForm li.push .form-control {
 Download
 =========================== */
 #download{
-	background-image:url(../img/bg3.jpg);
+	background-image:url(../img/figure-black-and-white-polygon.jpg);
 	background-position:0 0;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
