--- a/app/views/inscription.html
+++ b/app/views/inscription.html
@@ -1,53 +1,118 @@
-<form ng-submit="inscriptionSubmit()">
-  <!-- Info compte -->
-  <input type="text" ng-model="username" placeholder="Nom d'utilisateur">
-  <input type="text" ng-model="email" placeholder="Adresse email">
-  <input type="password" ng-model="password" placeholder="Mot de passe">
-  <input type="password" ng-model="passwordConfirm" placeholder="Confirmer mot de passe">
 
-  <!-- Infos personnelles -->
-  <input type="text" ng-model="firstname" placeholder="Prénom">
-  <input type="text" ng-model="lastname" placeholder="Nom de famille">
-  <input type="text" ng-model="address" placeholder="Adresse">
-  <input type="text" ng-model="zipcode" placeholder="Code postal">
-  <input type="text" ng-model="city" placeholder="Ville">
-  <input type="text" ng-model="phone" placeholder="Téléphone">
+<div id="wrapper-fixed" >
+	<div class="login-register-wrapper" ng-controller="LoginCtrl" back-img="/img/polygon.jpg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<div class="login-register">
+            <div class="tab-content log-tabs-containt">
+            <form ng-submit="inscriptionSubmit()" class="form-horizontal">
+              <!-- Info compte -->
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="username" placeholder="Nom d'utilisateur">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="email" placeholder="Adresse email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="password" class="form-control form-block" ng-model="password" placeholder="Mot de passe">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="password" class="form-control form-block" ng-model="passwordConfirm" placeholder="Confirmer mot de passe">
+                </div>
+              </div>
 
-  <input type="submit" value="Envoyer">
-</form>
 
-<div ng-show="usernameMessage">
-  {{ usernameMessage }}
-</div>
+              <div class="sparator"><span>Informations personnelles</span></div>
+              <!-- Infos personnelles -->
 
-<div ng-show="emailMessage">
-  {{ emailMessage }}
-</div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="lastname" placeholder="Nom de famille">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="firstname" placeholder="Prénom">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="address" placeholder="Adresse">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="zipcode" placeholder="Code postal">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="city" placeholder="Ville">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-12 text-left">
+                  <input type="text" class="form-control form-block" ng-model="phone" placeholder="Téléphone">
+                </div>
+              </div>
 
-<div ng-show="passwordMessage">
-  {{ passwordMessage }}
-</div>
+              <div class="form-group">
+                <div class="col-lg-12 text-center">
+                  <button class="btn btn-primary btn-lg" value="Envoyer">S'inscrire</button>
+                </div>
+              </div>
+            </form>
+          </div>
+						<div class="tab-content log-tabs-containt">
 
-<div ng-show="firstnameMessage">
-  {{ firstnameMessage }}
-</div>
+              <div ng-show="usernameMessage">
+                {{ usernameMessage }}
+              </div>
 
-<div ng-show="lastnameMessage">
-  {{ lastnameMessage }}
-</div>
+              <div ng-show="emailMessage">
+                {{ emailMessage }}
+              </div>
 
-<div ng-show="addressMessage">
-  {{ addressMessage }}
-</div>
+              <div ng-show="passwordMessage">
+                {{ passwordMessage }}
+              </div>
 
-<div ng-show="zipcodeMessage">
-  {{ zipcodeMessage }}
-</div>
+              <div ng-show="firstnameMessage">
+                {{ firstnameMessage }}
+              </div>
 
-<div ng-show="cityMessage">
-  {{ cityMessage }}
-</div>
+              <div ng-show="lastnameMessage">
+                {{ lastnameMessage }}
+              </div>
 
-<div ng-show="phoneMessage">
-  {{ phoneMessage }}
+              <div ng-show="addressMessage">
+                {{ addressMessage }}
+              </div>
+
+              <div ng-show="zipcodeMessage">
+                {{ zipcodeMessage }}
+              </div>
+
+              <div ng-show="cityMessage">
+                {{ cityMessage }}
+              </div>
+
+              <div ng-show="phoneMessage">
+                {{ phoneMessage }}
+              </div>
+						</div>
+					</div>
+					<pre>user = {{user | json}}</pre>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
