--- a/app/views/login.html
+++ b/app/views/login.html
@@ -5,10 +5,11 @@
 				<div class="col-md-12 text-center">
 					<div class="login-register">
 						<ul class="nav nav-tabs log-tabs" role="tablist">
-							<li role="presentation"><a href="#Login" role="tab" data-toggle="tab">Connexion</a></li>
-							<li role="presentation" class="active"><a href="#register" role="tab" data-toggle="tab">Inscription</a></li>
+							<li role="presentation"><a href="login/#Login" role="tab" data-toggle="tab">Connexion</a></li>
+							<li role="presentation" class="active"><a href="login/#register" role="tab" data-toggle="tab">Inscription</a></li>
 						</ul>
 						<div class="tab-content log-tabs-containt">
+							<!-- LOGIN -->
 							<div role="tabpanel" class="tab-pane" id="Login">
 								<p>
 									<a href="#" class="soscial-log facebook"><i class="fa fa-facebook"></i> <span>Connexion facebook</span></a>
@@ -16,7 +17,7 @@
 								<p>
 									<a href="#" class="soscial-log twitter"><i class="fa fa-twitter"></i> <span>Connexion twitter</span></a>
 								</p>
-								<div class="sparator"><span>or</span></div>
+								<div class="sparator"><span>ou</span></div>
 								<form class="form-horizontal">
 									<div class="form-group">
 										<div class="col-lg-12 text-left">
@@ -35,6 +36,7 @@
 									</div>
 								</form>
 							</div>
+							<!-- REGISTER -->
 							<div role="tabpanel" class="tab-pane active" id="register">
 								<p>
 									<a href="#" class="soscial-log facebook"><i class="fa fa-facebook"></i> <span>Connexion facebook</span></a>
