--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row text-center wow fadeInUp" data-wow-delay="0.4s">
         <div class="col-md-10 col-md-offset-1">
-          <h3><span>ODA Challenge</span> IPSSI</h3>
+          <h3><span>Y-ODA4</span> IPSSI</h3>
           <p class="btn-inline">
             <a href="#" data-pretty="prettyPhoto" class="btn btn-bordered btn-lg zoom">Explications vidéos</a>
             <a href="#" class="btn btn-primary btn-lg">Essai gratuit</a>
